--- a/Carnotauro/style.css
+++ b/Carnotauro/style.css
@@ -25,10 +25,11 @@ h1 {
     font-family: var(--fonteh1); 
     font-size: 3.5em;
     margin-bottom: 0px;
+    margin-top: 20px;
 }
 header > p {
     margin-bottom: 18px;
-    font-size: 1.1em;
+    font-size: 1.2em;
     margin-top: 5px;
 }
 header > p:hover {
@@ -61,17 +62,12 @@ nav > a {
     color: white;
     text-decoration: none;
     padding: 10px;
+    font-weight: bold;
     
 }
 #subtituloUm {
     text-align: center;
     margin-top: 0px;
-}
-main img {
-    max-width: 40%;
-    
-    display: block;
-    margin: auto;
 }
 .subt {
     font-size: 1.5em;
@@ -86,6 +82,7 @@ footer {
     background-color: #521605;
     text-align: center;
 }
+
 footer > p {
     font-style: italic;
     color: white;
@@ -98,4 +95,8 @@ main a {
     color: #D1370D;
     text-decoration: none;
     font-weight: bold;
+}
+img {
+    display: block;
+    margin: auto;
 }
