--- a/Cordel/style.css
+++ b/Cordel/style.css
@@ -11,7 +11,7 @@ body {
 }
 header {
     background-color: black;
-    color: white;
+    color: rgb(141, 9, 9);
     text-align: center;
     padding: 20px;
 }
@@ -56,7 +56,7 @@ main p {
     color: white;
     background-color: rgba(0, 0, 0, 0.116);
     display: inline-block;
-    padding: 10px;
+    padding: 5px;
     margin-left: 20px;
 }
 #div5 {
@@ -70,7 +70,7 @@ main p {
     color: white;
     background-color: rgba(0, 0, 0, 0.374);
     display: inline-block;
-    padding: 10px;
+    padding: 5px;
     margin-left: 20px;
 }
 footer {
