--- a/OTGW/style-screen.css
+++ b/OTGW/style-screen.css
@@ -1,9 +1,33 @@
 @charset "UTF-8";
 
-@media screen and (max-width: 600px) {
-    /* pequenas telas */
+
+@media screen and (max-width:300px) {
+
+    header {
+        background-color: red;
+    }
 section.texto {
-        width: 380px;  
+    /* width: 280px; */
+    width: 80%;
+}
+header img {
+    width: 200px;
+}
+header nav.menu {
+    display: none;
+}
+}
+
+
+
+@media screen and (min-width:301px) and (max-width: 600px) {
+    /* pequenas telas */
+    header {
+        background-color: blue;
+    }
+section.texto {
+        /* width: 380px;   */
+        width: 80%;
 }
 img#beatrice {
     position: absolute;
@@ -84,8 +108,6 @@ header nav.menu {
     width: 400px;
     font-size: 0.7em;
 }
-
-
 }
 
 
@@ -95,7 +117,8 @@ header nav.menu {
 @media screen and (min-width: 601px) and (max-width: 767px) {
     /* celulares */
     section.texto {
-        width: 500px;  
+        /* width: 500px;   */
+        width: 80%;
   }
 img#beatrice {
     position: absolute;
@@ -179,7 +202,8 @@ a#link-p2 {
 @media screen and (min-width: 768px) and (max-width: 992px) {
     /* tablets */
     section.texto {
-          width: 600px;  
+          /* width: 600px;   */
+          width: 80%;
     }
     .section-back {
         padding-top: 40px;
