--- a/OTGW/style.css
+++ b/OTGW/style.css
@@ -177,29 +177,33 @@ img#bell {
     width: 300px;
 }
 #p3 {
-    height: 480px;
+
+    height: 580px;
     background-color:var(--cor-fundo);
     padding-top: 20px;
     
 }
 #texto5 {
-margin-top: 20px;
+    margin-top: 20px;
+}
+
+#box-imgs {
+    background-color: none;
+    text-align: center;
+    padding: 20px;
+    width: 300px;
+    margin: auto;
 }
 #img3 {
-  width: 100px;
-  height: 100px;
-  float: right;
-  transform: translate(-40px, -280px);
-  /* box-shadow:  0px 0px 5px rgba(0, 0, 0, 0.523); */
-  border-radius: 50%;
+    width: 35%;
+    height: 100px;
+    margin: 5px;
 }
 #img4 {
+    margin: 5px;
     
-    border-radius: 50%;
-    width: 100px;
+    width: 35%;
     height: 100px;
-    /* box-shadow:  0px 0px 5px rgba(0, 0, 0, 0.523); */
-    transform: translate(35px, -190px);
 }
 #p-link {
     text-align: center;
@@ -212,7 +216,7 @@ padding: 5px;
 border-radius: 3px;
 margin: auto;
 /* margin-left: 610px; */
-margin-top: -90px;
+
 background-color: var(--cor2);
 color: white;
 text-align: center;
@@ -223,7 +227,6 @@ text-align: center;
 }
 .img-flutuante {
     box-shadow:  0px 0px 4px rgba(0, 0, 0, 0.678);
-    
 }
 .img-flutuante:hover {
     box-shadow: 0px 0px 5px black
