--- a/OTGW/style-screen.css
+++ b/OTGW/style-screen.css
@@ -6,14 +6,21 @@
         font-size: 0.9em;
     }
     header {
-        background-color: rgb(25, 168, 25);
         position: relative;
     }
-        footer {
-            width: 94.3%;
-             
-             
-        }
+    section#invisible {
+        position: absolute;
+        display: none;
+        background-color: white;
+        width: 80%;
+        height: 190px;
+        padding: 20px;
+        box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.425);
+        transform: translate(16px, 40px);
+    }
+     footer {
+        width: 94.3%; 
+    }
     header nav.menu {
         display: none;
     }
@@ -67,17 +74,34 @@
         width: 100%;
     }
     div#div-img2 {
-        background-color: greenyellow;
+        background-color: var(--cor3);
         width: 70%;
         height: 8%;
     }
-    
-    
+    #box-imgs {
+        background-color: none;
+        text-align: center;
+        margin: auto;
+        width: 200px;
+    }
+    #box-imgs img {
+        height: 80px;
+        width: 80px;
+    }
     section#p3 {
-        height: 830px;
+        height: 920px;
     }
     #link-p2 {
         margin-top: 25px;
+    }
+    #invisible .material-symbols-outlined {
+        color: black;
+        bottom: auto;
+        position: absolute;
+        transform: unset;
+        padding: 0px;
+        transform: translateX(270px);
+        font-size: 2em;
     }
 }
 
