--- a/OTGW/style-screen.css
+++ b/OTGW/style-screen.css
@@ -46,7 +46,14 @@
         margin-top: 10px;
     }
     section#p2 {
-        height: 820px;
+        /* height: 930px; */
+        height: fit-content;
+        block-size: fit-content;
+    }
+    section#p2 section.texto {
+        /* height: 900px; */
+        height: fit-content;
+        block-size: fit-content;
     }
     #beatrice {
         display: none;
@@ -88,9 +95,7 @@
         height: 80px;
         width: 80px;
     }
-    section#p3 {
-        height: 920px;
-    }
+    
     #link-p2 {
         margin-top: 25px;
     }
@@ -103,12 +108,22 @@
         transform: translateX(270px);
         font-size: 2em;
     }
+    section#p3 {
+        /* height: 1030px; */
+        height: fit-content;
+        block-size: fit-content;
+        padding-bottom: 30px;
+        width: 99%;
+    }
+    
 }
 
 @media screen and (min-width:401px) and (max-width: 600px) {
     /* pequenas telas */
-header {
-    background-color: blue;
+
+header nav.menu {
+    width: 95%;
+    font-size: 0.7em;
 }
 section.texto {
     /* width: 380px;   */
@@ -131,6 +146,9 @@ header span.material-symbols-outlined {
     padding-bottom: 35px;
     height: 620px;
 }
+#p2 {
+     height: 840px; 
+}
 #texto1 {
     margin-top: 0px;
 }
@@ -138,7 +156,7 @@ header span.material-symbols-outlined {
     margin-top: 90px;
 }
 #b2 {
-    height: 1250px;
+    height: 1320px;
 }
 #texto4 {
     margin-top: 40px;
@@ -148,11 +166,10 @@ header span.material-symbols-outlined {
     width: 96.5vw;
 }
 section#texto5 {
-    width: 380px;
-    height: 630px;
+    height: 730px;
 }
 #p3 {
-    height: 785px;
+    height: 890px;
 }
 a#link-p2 {
     margin-top: 25px;
@@ -178,10 +195,7 @@ a#link-p2 {
 header img {
     width: 400px;
 }
-header nav.menu {
-    width: 400px;
-    font-size: 0.7em;
-}
+
 }
 
 
