--- a/OTGW/style-screen.css
+++ b/OTGW/style-screen.css
@@ -12,12 +12,14 @@
     section#invisible {
         position: absolute;
         display: none;
-        background-color: white;
-        width: 80%;
-        height: 190px;
-        padding: 20px;
+        background-color: rgb(251, 248, 248);
+        min-width: 265px;
+        padding: 0px;
         box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.425);
-        transform: translate(16px, 40px);
+        left: -10px;
+    } 
+    section#invisible span.material-symbols-outlined {
+        padding: 5px;
     }
      footer {
         width: 94.3%; 
@@ -40,7 +42,7 @@
         margin: auto;
     }
     #p1 {
-        height: 800px;
+        height: fit-content;
         border-top: 20px solid var(--cor6);
     }
     #texto1 {
@@ -72,20 +74,23 @@
     section#b2 {
         width: 97%;
         margin: auto;
-        height: 1300px;
+        /* height: 1300px; */
+        height: fit-content;
     }
+    
     #img1 {
         width: 100%;
         display: block;
+        height: 45%;
     }
     #img2 {
-        height: 50%;
+        height: 55%;
         width: 100%;
     }
     div#div-img2 {
         background-color: var(--cor3);
         width: 70%;
-        height: 8%;
+        height: 250px;
     }
     #box-imgs {
         background-color: none;
@@ -97,10 +102,13 @@
         height: 80px;
         width: 80px;
     }
-    
-    #link-p2 {
-        margin-top: 25px;
+    section#p3 div.div-link {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        
     }
+    
+/*    
     #invisible .material-symbols-outlined {
         color: black;
         bottom: auto;
@@ -109,12 +117,11 @@
         padding: 0px;
         transform: translateX(270px);
         font-size: 2em;
-    }
+    } */
     section#p3 {
         /* height: 1030px; */
         height: fit-content;
         block-size: fit-content;
-        padding-bottom: 30px;
         width: 99%;
     }
     
@@ -122,6 +129,9 @@
 
 @media screen and (min-width:401px) and (max-width: 600px) {
     /* pequenas telas */
+    header {
+        background-color: darkblue;
+    }
 
 header nav.menu {
     width: 95%;
@@ -133,9 +143,11 @@ section.texto {
 }
 img#beatrice {
     position: absolute;
-    top: 0px;
-    right: 0px;
+    top: -210px;
+    right: 40px;
     width: 70px;
+    animation: none;
+
 }
 header span.material-symbols-outlined {
    position: relative; 
@@ -146,10 +158,10 @@ header span.material-symbols-outlined {
     border-top: 20px solid var(--cor6);
     border-bottom: 20px solid var(--cor6);
     padding-bottom: 35px;
-    height: 620px;
+    height: fit-content;
 }
 #p2 {
-     height: 840px; 
+     height: fit-content; 
 }
 #texto1 {
     margin-top: 0px;
@@ -158,7 +170,7 @@ header span.material-symbols-outlined {
     margin-top: 90px;
 }
 #b2 {
-    height: 1320px;
+    height: fit-content;
 }
 #texto4 {
     margin-top: 40px;
@@ -167,15 +179,11 @@ header span.material-symbols-outlined {
 #b1 {
     width: 96.5vw;
 }
-section#texto5 {
-    height: 730px;
-}
+
 #p3 {
-    height: 890px;
+    height: fit-content;
 }
-a#link-p2 {
-    margin-top: 25px;
-}
+
 #img1 {
     width: 260px;
     height: 225px;   
@@ -197,7 +205,24 @@ a#link-p2 {
 header img {
     width: 400px;
 }
-
+section#p3 div.div-link {
+    margin-bottom: 0px;
+}
+/* #invisible {
+    width: 80%;
+} */
+section#invisible {
+    position: absolute;
+    display: none;
+    background-color: rgb(251, 248, 248);
+    min-width: 300px;
+    padding: 10px;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.425);
+    left: -10px;
+} 
+section#invisible span.material-symbols-outlined {
+    padding: 5px;
+}
 }
 
 
@@ -206,15 +231,19 @@ header img {
 
 @media screen and (min-width: 601px) and (max-width: 767px) {
     /* celulares */
+    header {
+        background-color: darkolivegreen;
+    }
     section.texto {
         /* width: 500px;   */
         width: 80%;
   }
 img#beatrice {
     position: absolute;
-    top: 20px;
-    right: 10px;
+    top: -220px;
+    right: 50px;
     width: 70px;
+    animation: none;
 }
 header span.material-symbols-outlined {
    position: relative; 
@@ -245,9 +274,7 @@ section#texto5 {
 #p3 {
     height: 700px;
 }
-a#link-p2 {
-    margin-top: 25px;
-}
+
 #img1 {
     width: 235px;
     height: 225px;
@@ -270,8 +297,12 @@ a#link-p2 {
 }
 }
 
-
-
+section#p3 div.div-link {
+    margin-bottom: 0px;
+}
+/* #invisible {
+    width: 80%;
+} */
 
 
 
@@ -280,6 +311,9 @@ a#link-p2 {
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
     /* tablets */
+    header {
+        background-color: darkcyan;
+    }
     section.texto {
           /* width: 600px;   */
           width: 80%;
@@ -296,9 +330,10 @@ a#link-p2 {
     }
     img#beatrice {
         position: absolute;
-        top: 20px;
-        right: 10px;
+        top: -260px;
+        right: 50px;
         width: 100px;
+        animation: none;
     }
     section#texto5 {
         width: 500px;
@@ -308,8 +343,4 @@ a#link-p2 {
         height: 700px;
     }
     
-    #link-p2 {
-        margin: 0px;
-        margin: auto;
-    } 
 }
