--- a/OTGW/style-2.css
+++ b/OTGW/style-2.css
@@ -24,12 +24,14 @@ body {
 .texto {
     background-color: white;
     max-width: 1100px;
-    min-width: 280px;
+    min-width: 220px;
     margin: auto;
     padding: 20px;
     margin-bottom: 20px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.453); 
-    margin-top: 80px;
+    margin-top: 60px;
+    position: sticky;
+    overflow-x: auto;
 }
 li {
     margin: 3px;
