--- a/OTGW/style-screen.css
+++ b/OTGW/style-screen.css
@@ -14,9 +14,9 @@
         display: none;
         background-color: rgb(251, 248, 248);
         min-width: 265px;
-        padding: 0px;
+        padding: 5px;
         box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.425);
-        left: -10px;
+        left: -18px;
     } 
     section#invisible span.material-symbols-outlined {
         padding: 5px;
@@ -76,6 +76,7 @@
         margin: auto;
         /* height: 1300px; */
         height: fit-content;
+        background-image: none;
     }
     
     #img1 {
@@ -171,6 +172,7 @@ header span.material-symbols-outlined {
 }
 #b2 {
     height: fit-content;
+    
 }
 #texto4 {
     margin-top: 40px;
