--- a/OTGW/style-screen.css
+++ b/OTGW/style-screen.css
@@ -24,9 +24,14 @@
      footer {
         width: 94.3%; 
     }
-    header nav.menu {
-        display: none;
-    }
+
+
+
+   nav.menu {
+    display: none;
+   }
+
+
     header img {
         width: 90%;
         padding: 20px;
@@ -130,9 +135,7 @@
 
 @media screen and (min-width:401px) and (max-width: 600px) {
     /* pequenas telas */
-    header {
-        background-color: darkblue;
-    }
+    
 
 header nav.menu {
     width: 95%;
@@ -233,9 +236,6 @@ section#invisible span.material-symbols-outlined {
 
 @media screen and (min-width: 601px) and (max-width: 767px) {
     /* celulares */
-    header {
-        background-color: darkolivegreen;
-    }
     section.texto {
         /* width: 500px;   */
         width: 80%;
@@ -313,9 +313,6 @@ section#p3 div.div-link {
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
     /* tablets */
-    header {
-        background-color: darkcyan;
-    }
     section.texto {
           /* width: 600px;   */
           width: 80%;
