--- a/OTGW/style.css
+++ b/OTGW/style.css
@@ -345,7 +345,8 @@ body#important section.flex-section.section-back {
     width: 18vw;
     min-width: 190px;
     /* height: 100vh; */
-    height: 560px;
+    height: 100vh;   
+    min-height: 560px;
     flex-flow: column wrap;
     left: 0px;
     top: 0px;
