--- a/OTGW/style.css
+++ b/OTGW/style.css
@@ -344,7 +344,8 @@ body#important section.flex-section.section-back {
     box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.541);
     width: 18vw;
     min-width: 190px;
-    height: 94vh; 
+    /* height: 94vh;  */
+    max-height: 550px;
     min-height: 490px;
     /* height: 540px; */
     flex-flow: column wrap;
