--- a/OTGW/style-screen.css
+++ b/OTGW/style-screen.css
@@ -1,6 +1,22 @@
 @charset "UTF-8";
 
-
+@media screen and (max-height: 494px) and (orientation: landscape) {
+    .hidden-menu img {
+        transform: initial;
+        position: absolute;
+        top: 85px;
+        bottom: initial;
+        left: initial;
+        right: -65px;
+        transform: rotate(-90deg);
+        width: 80%;
+    }
+    .hidden-menu {
+        min-height: 276px;
+        height: 278px;
+        width: 350px;
+    }
+}
 @media screen and (max-width:400px) {
     body {
         font-size: 0.9em;
@@ -24,14 +40,9 @@
      footer {
         width: 94.3%; 
     }
-
-
-
    nav.menu {
-    display: none;
+        display: none;
    }
-
-
     header img {
         width: 90%;
         padding: 20px;
