--- a/OTGW/style.css
+++ b/OTGW/style.css
@@ -346,7 +346,7 @@ body#important section.flex-section.section-back {
     min-width: 190px;
     /* height: 94vh;  */
     max-height: 550px;
-    min-height: 490px;
+    min-height: 530px;
     /* height: 540px; */
     flex-flow: column wrap;
     left: 0px;
@@ -390,6 +390,7 @@ span.material-symbols-outlined.close-hidden-menu {
     padding-right: 10px;
     padding-bottom: 0px;
     font-size: 40px;
+    z-index: 5;
 }
 span.material-symbols-outlined.close-hidden-menu:hover {
     background-color: inherit;
