--- a/jogo/css/style.css
+++ b/jogo/css/style.css
@@ -9,14 +9,14 @@ body {
 }
 .container {
     width: 100%;
-    height: 500px;
-    /* border: 2px solid black; */
+    height: 93vh;
     margin: 0 auto;
     border-bottom: 20px solid rgb(4, 131, 13);
     position: relative;
     overflow: hidden;
     background-image: linear-gradient(to bottom, rgb(75, 171, 245), white);
     display: flex;
+    box-sizing: border-box;
 }
 .tubo {
     width: 90px;
@@ -112,4 +112,32 @@ body {
     margin-top: 10px;
     font-size: .6em;
     text-shadow: none;
+}
+.orientation {
+    display: flex;
+    display: none;
+    background-color: black;
+    width: 100%;
+    height: 100vh;
+    color: white;
+    justify-content: center;
+    align-items: center;
+}
+@media (max-width: 700px) {
+    .tubo {
+        animation-duration: 1.4s;
+    }
+}
+@media (max-width: 410px) {
+    .tubo {
+        animation-duration: 1.3s;
+    }
+}
+@media (orientation: portrait) and (max-width: 470px) {
+    .orientation {
+        display: flex;
+    }
+    .container {
+        display: none;
+    }
 }
