--- a/jogo/css/style.css
+++ b/jogo/css/style.css
@@ -123,6 +123,11 @@ body {
     justify-content: center;
     align-items: center;
 }
+@media (max-width: 850px) {
+    .tubo {
+        animation-duration: 1.6s;
+    }
+}
 @media (max-width: 700px) {
     .tubo {
         animation-duration: 1.4s;
