--- a/jogo/css/style.css
+++ b/jogo/css/style.css
@@ -10,6 +10,7 @@ body {
 .container {
     width: 100%;
     height: 93vh;
+    height: calc(var(--vh, 1vh) * 93);
     margin: 0 auto;
     border-bottom: 20px solid rgb(4, 131, 13);
     position: relative;
