--- a/OTGW/style.css
+++ b/OTGW/style.css
@@ -56,8 +56,9 @@ p {
 }
 h1 {
     text-align: center;
-    margin: 8px;
-    
+    margin: 10px;
+    margin-top: 0px;
+    font-size: 1.45em;
 }
 h2 {
     text-align: center;
