--- a/OTGW/style.css
+++ b/OTGW/style.css
@@ -1,8 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Toto&display=swap');
 
-
-
 :root {
     --cor-fundo: rgb(227, 219, 193);
     --cor2: rgb(62, 47, 44);
@@ -101,7 +99,6 @@ main {
     padding-top: 20px;
     padding-bottom: 0px;
     height: 780px;
-    
 }
 .material-symbols-outlined {
     color: white;
@@ -273,6 +270,10 @@ section#invisible {
 a {
     color: var(--cor7);
     text-decoration: none;
+
+}
+a:hover {
+    text-decoration: underline;
 }
 footer a {
     text-decoration: none;
@@ -380,6 +381,26 @@ body#important section.flex-section.section-back {
     /* left: -70px; */
     left: -30%;
     bottom: 80px;
+}
+
+.div-git {
+    position: relative;
+    width: 100%;
+    height: 150px;
+}
+.github-logo {
+    position: absolute;
+    margin: auto;
+    margin-bottom: 4%;
+    width: 140px;
+    right: 50%;
+    margin-right: -70px;
+}
+.github-logo:hover {
+    width: 150px;
+    margin-right: -75px;
+    background-color: rgba(191, 188, 188, 0.653);
+    border-radius: 50%;
 }
 span.material-symbols-outlined.close-hidden-menu {
     color: white;
