--- a/jogo/css/style.css
+++ b/jogo/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 * {
     margin: 0px;
     padding: 0px;
@@ -33,21 +34,124 @@ body {
     position: absolute;
     bottom: 0px;
 }
+.turtle {
+    display: none;
+    transform: rotateY(180deg);
+    width: 170px;
+    position: absolute;
+    right: 0px;
+    bottom: 110px;
+    z-index: 3;
+    animation-name: turtle-animacao;    
+    animation-duration: 2s;
+    /* animation-iteration-count: 1; */
+    animation-timing-function: ease-out; 
+}
+img.bullet-bill {
+    display: none;
+    position: absolute;
+    bottom: 0px; 
+    right: -140px; 
+    height: 100px;
+    width: 140px;
+    /* animation-name: bullet-animation;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    */
+    z-index: 5; 
+    
+}
+.bill-img {
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    right: -140px;
+    height: 100px;
+    width: 140px;
+    /* animation: bullet-animation 2s 2 ease-in; */
+}
 .clouds {
     position: absolute;
     width: 900px;
     right: -900px;
-    animation: cloud-movement 65s infinite;
+    animation: cloud-movement 65s infinite linear;
 }
 .jump {
     animation-name: pulos;   
     animation-duration: 700ms;
     animation-timing-function: ease-out;
 }
+.iniciar {
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    left: 50%;
+    margin-left: -200px;
+    top: 50%;
+    margin-top: -200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 9em;
+    font-family: 'Lilita One', cursive, Arial;
+    color: white;
+    text-shadow: -3px 3px 0px rgb(0, 0, 0);
+}
+section.iniciar h1 {
+    font-size: 50px;
+    background-color: red;
+    border-radius: 15px;
+    padding: 10px;
+    border: 4px solid black;
+}
+.parado {
+    width: 62px;
+    left: 45px;
+}
+.seconds {
+    width: 100px;
+    height: 50px;
+    background: none;
+    color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Lilita One', cursive, Arial;
+    font-size: 30px;
+}
 
 @keyframes tubo-animacao {
     from {
         right: -90px;
+    }
+    to {
+        right: 100%;
+    }
+}
+@keyframes bullet-animation {
+    from {
+        right: -180px;
+    }
+    to {
+        right: 100%;
+    }
+}
+@keyframes turtle-animacao {
+    from {
+        right: -200px;
+    }
+    to {
+        right: 0px;
+    }
+}
+@keyframes turtle-animacao-completa {
+    from {
+        right: -200px;
     }
     to {
         right: 100%;
@@ -80,39 +184,63 @@ body {
         right: 100vw;
     }
 }
+@keyframes cloud-movement-dois {
+    from {
+        right: -450px;
+    }
+    to {
+        right: 100vw;
+    }
+}
 .div-fim {
     background-color: rgb(255, 255, 255);
     text-shadow: 3px 2px 0px rgb(255, 255, 255);
     background: none;
-    width: 300px;
-    height: 150px;
-    align-self: center;
-    margin: auto;
+    padding: 20px; 
+    align-self: center; 
+    margin: auto; 
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center; 
     text-align: center;
-    font-family: fantasy;
+    font-family: 'Lilita One', cursive, Arial;
     border-radius: 15px;
     font-size: 3.1em;
     z-index: 4;
+    background: rgb(250, 28, 28);
+    border: 5px solid black;
 }
+
 .div-fim span {
     font-size: .8em;
     text-shadow: none;
     margin-top: 15px;
+    background-color: aliceblue;
+    border-radius: 50%;
+    animation: pulsante 1s infinite;
 }
 .div-fim span:hover {
-    background-color: rgb(93, 167, 251);
+    /* background-color: rgb(93, 167, 251); */
+    background-color: aliceblue;
     border-radius: 50%;
-    box-shadow: 0px 0px 5px rgb(16, 127, 255);
     cursor: pointer;
+    box-shadow: 0px 0px 10px rgb(211, 218, 223);
+}
+@keyframes pulsante {
+    from {
+    box-shadow: 0px 0px 0px rgb(211, 218, 223);
+    }
+    to {
+    box-shadow: 0px 0px 4px rgb(250, 250, 251);
+    }
 }
 .pontos {
     margin-top: 10px;
     font-size: .6em;
     text-shadow: none;
+    color: white;
+    text-shadow: 0px 0px 4px rgb(0, 0, 0);
 }
 .orientation {
     display: flex;
@@ -123,6 +251,19 @@ body {
     color: white;
     justify-content: center;
     align-items: center;
+}
+.ruim {
+    background-image: url('/imgs/mario-drawing.png');
+    background-position: center center;
+    background-size: cover;
+    width: 100%;
+    height: 180px;
+    margin-top: 15px;
+}
+.mario-vitoria {
+    width: 80px;
+    bottom: -5px;
+    left: 45px;
 }
 @media (max-width: 850px) {
     .tubo {
@@ -138,6 +279,10 @@ body {
     .tubo {
         animation-duration: 1.3s;
     }
+    img.clouds {
+        width: 450px;
+        right: -450px;
+    }
 }
 @media (orientation: portrait) and (max-width: 470px) {
     .orientation {
@@ -145,5 +290,23 @@ body {
     }
     .container {
         display: none;
+    }
+}
+@media (max-height: 270px) {
+    img.clouds {
+        width: 450px;
+        animation: cloud-movement-dois 45s infinite;
+    }
+}
+@media (min-height: 271px) and (max-height: 400px) {
+    img.clouds {
+        width: 550px;
+        animation: cloud-movement-dois 45s infinite;
+    }
+}
+@media (min-height: 401px) and (max-height: 500px) {
+    img.clouds {
+        width: 650px;
+        animation: cloud-movement-dois 45s infinite;
     }
 }
