--- a/jogo/css/style.css
+++ b/jogo/css/style.css
@@ -288,6 +288,9 @@ section.iniciar h1 {
     .orientation {
         display: flex;
     }
+    output.seconds {
+        display: none;
+    }
     .container {
         display: none;
     }
