--- a/reiDoPorco/style.css
+++ b/reiDoPorco/style.css
@@ -16,7 +16,6 @@ body {
 a {
     text-decoration: none;
     color: black;
-
 }
 html {
     font-size: 62,5%;
@@ -35,7 +34,6 @@ a {
 span {
     cursor: pointer;
 }
-
 header img {
     width: 150px;
     justify-self: flex-start;
@@ -307,9 +305,16 @@ div.contato {
     font-family: 'Merienda';
     box-shadow: 0px 0px 5px rgba(80, 79, 79, 0.759);
     margin-bottom: 3rem;
+    margin: 0px;
+    text-align: center;
 }
 div.contato:hover {
     background-color: rgb(239, 239, 112);
+}
+section.sec-bg.section#section-contato {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 #section-contato div:hover {
     transition: .7s;
@@ -317,12 +322,14 @@ div.contato:hover {
 #section-contato div:nth-child(1) {
     /* margin-right: 25rem; */
     /* 400 */
-    margin-right: 25%;
+    /* margin-right: 25%; */
+    margin: 25px;
 }
 #section-contato div:nth-child(2) {
-    margin-left: 10rem;
+    /* margin-left: 10rem; */
     /* 160 */
-    margin-left: 1%;
+    /* margin-left: 1%; */
+    margin: 25px;
 }
 #section-contato div:nth-child(3) {
     background: none;
@@ -388,6 +395,15 @@ section#section-contato div.contato span.entre-contato:hover {
         color: white;
         font-size: 2rem;
         max-width: 60%;
+    }
+}
+
+@media (max-width:580px) {
+    .home h1 {
+        font-size: 4rem;
+    }
+    .home p {
+        font-size: 2rem;
     }
 }
 
