--- a/reiDoPorco/style.css
+++ b/reiDoPorco/style.css
@@ -421,6 +421,43 @@ section#section-contato div.contato span.entre-contato:hover {
 
 }
 
+@media (max-width:700px) {
+    div.section.div-text-top {
+     /* padding-left: 0px; */
+     /* min-width: 350px; */
+     padding: 0px;
+     width: 90%;
+     text-align: center;
+     color: black;
+     margin: auto;
+    }
+    .sec-head {
+     background-image: none;
+     background-color: #FFF;
+    }
+    .div-text-top h2 {
+     font-size: 2rem;
+     margin-bottom: 5px;
+ }
+ .div-text-top p {
+     color: black;
+ }
+ .div-text-top div {
+     width: 100%;
+ }
+ div.div-text-top.section div:nth-child(1) {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     height: 290px;
+ }}
+
+@media (max-width:820px) {
+    .div-text-top {
+        padding-left: 3.5rem;
+    }
+}
+
 @media (max-width:1402px) {
     main section.texto.texto-completo {
         max-width: none;
@@ -431,38 +468,4 @@ section#section-contato div.contato span.entre-contato:hover {
     }
 }
 
-@media (max-width:820px) {
-    .div-text-top {
-        padding-left: 3.5rem;
-    }
-}
 
-@media (max-width:700px) {
-   .div-text-top {
-    /* padding-left: 0px; */
-    /* min-width: 350px; */
-    padding: 0px;
-    width: 100%;
-    text-align: center;
-    color: black;
-   }
-   .sec-head {
-    background-image: none;
-    background-color: #FFF;
-   }
-   .div-text-top h2 {
-    font-size: 2rem;
-    margin-bottom: 5px;
-}
-.div-text-top p {
-    color: black;
-}
-.div-text-top div {
-    width: 100%;
-}
-div.div-text-top.section div:nth-child(1) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 290px;
-}}
