--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -5,6 +5,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root {
+    --variavel: 300px;
+}
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
@@ -34,12 +37,15 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
-    /* background-color: #fff; */
+    padding: 2rem;
     background-color: #331610;
+    /* background-image: linear-gradient(to right, #27110c, #331610); */
     color: #FFF;
     position: fixed;
     width: 100%;
+}
+span.material-symbols-outlined {
+    font-size: 4rem;
 }
 section.home-section {
     background-image: url('imgs/Fallout_\ New\ Vegas.jpg');
@@ -54,28 +60,22 @@ main h1 {
     font-family: 'Anton', sans-serif;
     font-weight: bolder;
     font-size: 6rem;
+    /* text-shadow: 0px 0px 7px rgb(0, 0, 0); */
+    text-shadow: 0px 0px 10px rgb(0, 0, 0);
     color: #FFF;
     line-height: 6rem;
     text-align: center;
 }
 .home-section p {
     color: rgb(255, 255, 255);
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     width: 270px;
-    /* font-style: italic; */
-
     margin-top: 2rem;
     text-align: center;
-
-    /* background-color: rgb(253, 253, 253); */
-    /* padding: .3rem; */
-    /* box-shadow: 0px 0px 4px rgb(255, 255, 255); */
-    /* border-radius: .5rem; */
-    
 }
 p.line {
     border-right: 2px solid rgba(255, 255, 255, 0.75);
-    width: 270px;
+    width: var(--variavel);
     white-space: nowrap;
     overflow: hidden;
     font-family: monospace;
@@ -88,7 +88,7 @@ p.line {
         width: 0px;
     }
     to {
-        width: 270px;
+        width: var(--variavel);
     }
 }
 @keyframes blink {
@@ -99,3 +99,38 @@ p.line {
         border-right-color: transparent;
     }
 }
+
+
+
+
+@media (min-width:350px) {
+    :root {
+        --variavel: 350px;
+    }
+    main h1 {
+        font-size: 8rem;
+        line-height: 8rem;
+    }
+    .home-section p {
+        font-size: 1.9rem;
+    }
+}
+@media (min-width: 576px) {
+
+}
+@media (min-width: 768px) {
+
+}
+@media (min-width: 992px) {
+
+}
+@media (min-width: 1200px) {
+
+}
+
+
+
+
+
+
+
