--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 :root {
-    --variavel: 300px;
+    --variavel: 270px;
 }
 html {
     font-size: 62.5%;
@@ -48,7 +48,7 @@ span.material-symbols-outlined {
     font-size: 4rem;
 }
 section.home-section {
-    background-image: url('imgs/Fallout_\ New\ Vegas.jpg');
+    background-image: url('imgs/ceu-editado.jpg');
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -68,7 +68,7 @@ main h1 {
 }
 .home-section p {
     color: rgb(255, 255, 255);
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     /* width: 270px; */
     margin-top: 2rem;
     text-align: center;
@@ -90,12 +90,76 @@ p.line {
     width: 5rem;
     margin-right: 1rem;
 }
+span:hover {
+    cursor: pointer;
+}
+
+.nav-menu ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    display: none;
+}
+.nav-menu ul li a {
+    position: relative;
+    padding-bottom: .2rem;
+}
+.nav-menu ul li a::after {
+    content: " ";
+    width: 0;
+    height: 2px;
+    background-color: #c5ced5;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+.nav-menu ul li a:hover::after {
+    width: 100%;
+    transition: .3s ease-out;
+}
+.hidden {
+    display: none;
+    padding: 0rem;
+    text-align: center;
+    background-color: #0d0d0d;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+.hidden ul {
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: .5rem;
+}
+.hidden ul li {
+    list-style: none;
+    border-bottom: 1px solid rgb(0, 0, 0);
+    width: 90%;
+    padding: .3rem;
+}
+.hidden ul li a {
+    color: rgba(253, 251, 251, 0.805);
+}
+.hidden span {
+    position: absolute;
+    top: 0rem;
+    right: .5rem;
+    color: red;
+}
+
 @keyframes typing {
     from {
         width: 0px;
+        background-color: #838080;
     }
     to {
         width: calc(var(--variavel) + 10px);
+        background-color: #838080;
     }
 }
 @keyframes blink {
@@ -123,7 +187,16 @@ p.line {
     }
 }
 @media (min-width: 576px) {
-
+    .nav-menu {
+        background-color: #331610;
+        position: fixed;
+        width: 100%;
+        padding: 1rem;
+    }
+    span.material-symbols-outlined {
+        font-size: 3.5rem;
+        margin-right: 1rem;
+    }
 }
 @media (min-width: 768px) {
 
@@ -132,7 +205,30 @@ p.line {
 
 }
 @media (min-width: 1200px) {
-
+    section.home-section {
+        background-image: url('imgs/ceu-renascentista-landscape.jpg');
+        background-position: center center;
+    }
+    .nav-menu {
+        display: flex;
+        background-color: #33161066;
+        position: fixed;
+        width: 100%;
+        padding: 1rem;
+    }
+    main h1 {
+        font-size: 10rem;
+        line-height: 10rem;
+    }
+    span.material-symbols-outlined-menu {
+        display: none;
+    }
+    .nav-menu ul li {
+        margin-right: 1.5rem;
+    }
+    .nav-menu ul {
+        display: flex;
+    }
 }
 
 
