--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -119,13 +119,17 @@ span:hover {
     transition: .3s ease-out;
 }
 .hidden {
-    display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* display: none; */
     padding: 0rem;
     text-align: center;
     background-color: #0d0d0d;
     position: absolute;
     top: 0;
     width: 100%;
+    height: 30rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
@@ -136,20 +140,23 @@ span:hover {
     align-items: center;
     flex-direction: column;
     padding: .5rem;
+    width: 100%;
 }
 .hidden ul li {
     list-style: none;
     border-bottom: 1px solid rgb(0, 0, 0);
-    width: 90%;
-    padding: .3rem;
+    border-top: 1px solid black;
+    /* width: 20rem; */
+    width: 100%;
+    padding: 1rem;
 }
 .hidden ul li a {
     color: rgba(253, 251, 251, 0.805);
 }
 .hidden span {
     position: absolute;
-    top: 0rem;
-    right: .5rem;
+    top: 2rem;
+    right: 2rem;
     color: red;
 }
 
@@ -190,7 +197,7 @@ span:hover {
         font-size: 3.5rem;
         margin-right: 1rem;
 
-        color: rgb(212, 255, 38);
+        /* color: rgb(212, 255, 38); */
     }
 }
 @media (min-width: 576px) {
