--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -212,10 +212,17 @@ h2 {
     padding: .5rem;
 }
 div.foto {
+    /* width: 25rem; */
+    /* height: 25rem; */
+    /* border-radius: 50%; */
+    /* background-color: red; */
+    text-align: center;
+}
+.minha-foto {
     width: 25rem;
     height: 25rem;
     border-radius: 50%;
-    background-color: red;
+    box-shadow: 0px 0px 4px black;
 }
 
 
